cmake_minimum_required (VERSION 3.8)

project ("SIQRS")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules)
find_package(GMP REQUIRED)
INCLUDE_DIRECTORIES(${GMP_INCLUDE_DIR})


file(GLOB SIQRS_SRC ${PROJECT_SOURCE_DIR}/*.cpp ${PROJECT_SOURCE_DIR}/*.cc ${PROJECT_SOURCE_DIR}/*.h)
add_executable (SIQRS ${SIQRS_SRC})
target_link_libraries(SIQRS ${GMP_LIBRARIES})

SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DDEBUG")
